# Natsu

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
natsu/source/natsu_gfx/: CMakeLists.txt
natsu/source/natsu_gfx/include/natsu_gfx/: cmdlist_handle.h  command_context.h  command_list.h  command_queue.h  descriptor_heap.h  descriptor_heap_manager.h  device.h  dx_common.h  frame_resource.h  frame_resource_manager.h  general_desc.h  pch.h  render_pass.h  resource_manager.h
natsu/source/natsu_gfx/include/natsu_gfx/resource/: buffer.h  buffer_view.h  default_buffer.h  descriptor_heap_alloc_view.h  mesh.h  readback_buffer.h  resource.h  resource_stateTracker.h  texture.h  upload_buffer.h  vertex_index_buffer.h
natsu/source/natsu_gfx/include/natsu_gfx/shader/: basic_shader.h  (+5 more)
natsu/source/natsu_gfx/src/: cmdlist_handle.cpp  command_context.cpp  command_list.cpp  command_queue.cpp  descriptor_heap.cpp  descriptor_heap_manager.cpp  device.cpp  dx_common.cpp  frame_resource.cpp  frame_resource_manager.cpp  general_desc.cpp  resource_manager.cpp
natsu/source/natsu_gfx/src/resource/: buffer.cpp  default_buffer.cpp  mesh.cpp  readback_buffer.cpp  resource_stateTracker.cpp  texture.cpp  upload_buffer.cpp  vertex_index_buffer.cpp
natsu/source/natsu_gfx/src/shader/: basic_shader.cpp  global_samplers.cpp  pso_manager.cpp  shader.cpp
natsu/source/natsu_gfx/src/util/: reflactable_struct.cpp  stack_allocator.cpp  var_size_alloc_mngr.cpp  xxhash.cpp
natsu/source/natsu_runtime/: CMakeLists.txt
natsu/source/natsu_runtime/source/natsu_runtime/: engine.cpp  engine.h  pch.h
(+39 files in other folders)
